# nd

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
bar/: CMakeLists.txt
bar/include/bar/: bar.hpp
bar/src/: bar.cpp
bar/tests/: CMakeLists.txt
bar/tests/include/bar_test/: bar_test.hpp
bar/tests/src/: bar_test.cpp
foo/: CMakeLists.txt
foo/include/foo/: foo.hpp
foo/src/: foo.cpp
foo/tests/: CMakeLists.txt
foo/tests/include/foo_test/: foo_test.hpp
foo/tests/src/: foo_test.cpp
include/nudny/: nudny.hpp
io/: CMakeLists.txt
io/include/io/: io.hpp  serializable.hpp
io/src/: serializable.cpp
io/tests/: CMakeLists.txt
nn/: CMakeLists.txt
nn/include/nn/: tensor.hpp
nn/src/: tensor.cpp
nn/tests/: CMakeLists.txt
nn/tests/include/nn/: tensor_test.hpp
nn/tests/src/: tensor_test.cpp
nrl/: CMakeLists.txt
nrl/include/nrl/: network.hpp  neuron.hpp  nrl.hpp  tensor.hpp  tensor.hpp.bak
nrl/src/: network.cpp  tensor.cpp  tensor.cpp.bak
nrl/tests/: CMakeLists.txt
nrl/tests/include/nrl/: tensor_test.hpp
nrl/tests/src/: tensor_test.cpp
scripts/: build.sh  gencov.sh
src/: main.cpp
tests/: CMakeLists.txt
util/: CMakeLists.txt
util/include/: callback_queue.hpp  conv.hpp  fio.hpp  param.hpp  quasi_singleton.hpp
util/include/util/: callback_queue.hpp  cli_parser.hpp
util/src/: cli_parser.cpp
util/tests/: CMakeLists.txt
